@@ -4,6 +4,7 @@ UNRELEASED CHANGES:
 * Activate eslint to check vue and javascript formatting
 * Fix tasks store and update
 * Fix error handling in vue components
+* Fix exception when user is logged out
 
 RELEASED VERSIONS:
 
